--- a/uDynamic/uDynamic.csproj
+++ b/uDynamic/uDynamic.csproj
@@ -230,6 +230,7 @@
     <Compile Include="App_Code\EmbeddedAssembly\EmbeddedResourceController.cs" />
     <Compile Include="App_Code\EmbeddedAssembly\RouteConfig.cs" />
     <Compile Include="App_Code\Events\UmbracoStartupEvent.cs" />
+    <Compile Include="App_Code\Extensions\IListExtensions.cs" />
     <Compile Include="App_Code\Installer\Setup.ascx.cs">
       <DependentUpon>Setup.ascx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -244,7 +245,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Code\Extensions\" />
     <Folder Include="App_Code\Helpers\" />
     <Folder Include="App_Data\" />
     <Folder Include="Views\" />
