--- a/uDynamic/uDynamic.csproj
+++ b/uDynamic/uDynamic.csproj
@@ -120,6 +120,7 @@
       <Private>True</Private>
       <HintPath>..\packages\UmbracoCms.Core.7.1.4\lib\System.Data.SqlServerCe.Entity.dll</HintPath>
     </Reference>
+    <Reference Include="System.IO.Compression.FileSystem" />
     <Reference Include="System.Net.Http.Formatting, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <Private>True</Private>
       <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.4.0.30506.0\lib\net40\System.Net.Http.Formatting.dll</HintPath>
@@ -231,6 +232,7 @@
     <Compile Include="App_Code\EmbeddedAssembly\RouteConfig.cs" />
     <Compile Include="App_Code\Events\UmbracoStartupEvent.cs" />
     <Compile Include="App_Code\Extensions\IListExtensions.cs" />
+    <Compile Include="App_Code\Helpers\XmlHelper.cs" />
     <Compile Include="App_Code\Installer\Setup.ascx.cs">
       <DependentUpon>Setup.ascx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -240,12 +242,14 @@
       <DependentUpon>Setup.ascx</DependentUpon>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Compile>
+    <Compile Include="App_Code\PackageActions\DeleteFile.cs" />
+    <Compile Include="App_Code\PackageActions\InstallFiles.cs" />
+    <Compile Include="App_Code\PackageActions\UninstallFiles.cs" />
     <Compile Include="Controllers\uDynamicApiController.cs" />
     <Compile Include="Models\DropdownListItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Code\Helpers\" />
     <Folder Include="App_Data\" />
     <Folder Include="Views\" />
   </ItemGroup>
