--- a/uDynamic/uDynamic.csproj
+++ b/uDynamic/uDynamic.csproj
@@ -232,7 +232,10 @@
     <Compile Include="App_Code\EmbeddedAssembly\EmbeddedResourceController.cs" />
     <Compile Include="App_Code\EmbeddedAssembly\RouteConfig.cs" />
     <Compile Include="App_Code\Events\UmbracoStartupEvent.cs" />
+    <Compile Include="App_Code\Extensions\IContentExtensions.cs" />
     <Compile Include="App_Code\Extensions\IListExtensions.cs" />
+    <Compile Include="App_Code\Extensions\IPublishedContentExtensions.cs" />
+    <Compile Include="App_Code\Helpers\ContentHelper.cs" />
     <Compile Include="App_Code\Helpers\XmlHelper.cs" />
     <Compile Include="App_Code\Installer\Setup.ascx.cs">
       <DependentUpon>Setup.ascx</DependentUpon>
