--- a/uDynamic/uDynamic.csproj
+++ b/uDynamic/uDynamic.csproj
@@ -236,6 +236,7 @@
     <Compile Include="App_Code\Extensions\IListExtensions.cs" />
     <Compile Include="App_Code\Extensions\IPublishedContentExtensions.cs" />
     <Compile Include="App_Code\Helpers\ContentHelper.cs" />
+    <Compile Include="App_Code\Helpers\ExceptionHelper.cs" />
     <Compile Include="App_Code\Helpers\XmlHelper.cs" />
     <Compile Include="App_Code\Installer\Setup.ascx.cs">
       <DependentUpon>Setup.ascx</DependentUpon>
